--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#1976d2" />
     <meta name="description" content="私人导航站，整理和分享您喜爱的网站链接" />
     <link rel="icon" href="/vite.svg" />
-    <title>私人导航站</title>
+    <title>qdbihc私人导航站</title>
   </head>
   <body>
     <div id="root"></div>
